[gd_scene load_steps=3 format=3 uid="uid://buxh3bh1fhmtf"]

[ext_resource type="PackedScene" uid="uid://dvv01sx0xnhn4" path="res://KayKit-Restaurant-Bits-1.0-153c8a7535b48237854cb54ff6890679f8c574d1/addons/kaykit_restaurant_bits/Assets/gltf/food_ingredient_bun_bottom.gltf" id="1_8y5te"]
[ext_resource type="Script" uid="uid://bv6yn8xk1wsv0" path="res://scripts/objeto_agarrable.gd" id="2_script"]

[node name="food_ingredient_bun_bottom2" type="RigidBody3D"]
script = ExtResource("2_script")

[node name="food_ingredient_bun_bottom" parent="." instance=ExtResource("1_8y5te")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
